# tasks_manager_python

./: .gitignore  README.md  doc.drawio  pyproject.toml
consumer_example/: say_hello.py
tasks_manager_python/consumer/: __init__.py  types.py
tasks_manager_python/consumer/boradcasting/: task_execution.py
tasks_manager_python/consumer/providers/: __init__.py  rabbitmq.py
tasks_manager_python/loggers/: __init__.py
tasks_manager_python/logging_utils/: __init__.py
tasks_manager_python/rabbitmq/: __init__.py  app.py
tasks_manager_python/repository/: task_execution.py
